<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MediumPurple"
    app:layoutDescription="@xml/fragment_b_scene"
    tools:context=".FragmentB">

    <TextView
        android:id="@+id/titleB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/titleB"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/subtitleB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleB" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="422dp" />

    <TextView
        android:id="@+id/Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="675dp"
        android:textStyle="italic"/>

</androidx.constraintlayout.motion.widget.MotionLayout>